assets/scss/1-base/_links.scss
// Rules for styling links
// =========================================

//.links__offset::before {
//  // mobile devices get slightly different offset b/c of different sized fixed header
//  content: " ";
//  display: block;
//  height: 171px; // defining a height pushes the element down the page
//  margin-top: -171px; // negative margin is needed to push it back to its original position
//  pointer-events: none; // w/ out this it will interfere with the sites navigation links
//  visibility: hidden;
//}
//
//@media screen and (min-width: 768px) {
//    .links__offset::before {
//      height: 150px;
//      margin-top: -150px;
//  }
//}
.links__alert-info-darker {
  color: #0068d6;
  &:hover {
    color: #005ec2;
  }
}

